--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@types/react-responsive-masonry": "^2.1.0",
+    "@types/shopify-buy": "^2.17.1",
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-masonry": "^2.1.7",
+    "shopify-buy": "^2.19.0",
+    "styled-components": "^5.3.10",
     "typescript": "5.1.3"
   }
 }
