imported components from old repo

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.0",
     "react-responsive-masonry": "^2.1.7",
     "shopify-buy": "^2.19.0",
     "styled-components": "^5.3.10",
