--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
     "shopify-buy": "^2.19.0",
     "styled-components": "^5.3.10",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
