--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-responsive-masonry": "^2.1.7",
     "shopify-buy": "^2.19.0",
     "styled-components": "^5.3.10",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3"
   },
   "devDependencies": {
