--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-responsive-masonry": "^2.1.0",
     "@types/shopify-buy": "^2.17.1",
     "@types/styled-components": "^5.1.26",
+    "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
@@ -26,6 +27,7 @@
     "react-responsive-masonry": "^2.1.7",
     "shopify-buy": "^2.19.0",
     "styled-components": "^5.3.10",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3"
   },
