--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "lucide-react": "^0.252.0",
     "next": "13.4.5",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
