--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
@@ -16,6 +17,7 @@
     "@types/react-responsive-masonry": "^2.1.0",
     "@types/shopify-buy": "^2.17.1",
     "@types/styled-components": "^5.1.26",
+    "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
