--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "styled-components": "^5.3.10",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
