--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^8.1.0",
     "react-responsive-masonry": "^2.1.7",
     "shopify-buy": "^2.19.0",
+    "sonner": "^0.6.2",
     "styled-components": "^5.3.10",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
