--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5",
+    "eslint-config-next": "^14.0.4",
     "lucide-react": "^0.252.0",
-    "next": "13.4.5",
+    "next": "^14.0.4",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
     "react-responsive-masonry": "^2.1.7",
     "shopify-buy": "^2.20.1",
