--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,20 +16,20 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
     "@types/react-responsive-masonry": "^2.1.0",
     "@types/shopify-buy": "^2.17.1",
     "@types/styled-components": "^5.1.26",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
-    "eslint-config-next": "^14.0.4",
+    "eslint-config-next": "15.1.3",
     "lucide-react": "^0.252.0",
-    "next": "^14.2.3",
+    "next": "15.1.3",
     "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-redux": "^8.1.0",
     "react-responsive-masonry": "^2.1.7",
     "shopify-buy": "^2.20.1",
@@ -44,5 +44,9 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
+  },
+  "overrides": {
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2"
   }
 }
