--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-shopify-printful",
+  "name": "nextjs-shopify-printful",
   "version": "0.1.0",
   "private": true,
   "scripts": {
